--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@
 
 # Fortran module files
 *.mod
-*.smod
 
 # Compiled Static libraries
 *.lai
@@ -27,3 +26,11 @@
 *.exe
 *.out
 *.app
+
+*.sdf
+*.aps
+.vs
+ipch
+Debug
+Release
+x64
