--- a/Rhino.vcxproj.filters
+++ b/Rhino.vcxproj.filters
@@ -21,9 +21,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Rhino.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -57,6 +54,12 @@
     <ClInclude Include="Config.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="dialog\AboutDlg.h">
+      <Filter>头文件\dialog</Filter>
+    </ClInclude>
+    <ClInclude Include="dialog\RenderDlg.h">
+      <Filter>头文件\dialog</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Rhino.cpp">
@@ -86,6 +89,12 @@
     <ClCompile Include="Config.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="dialog\AboutDlg.cpp">
+      <Filter>源文件\dialog</Filter>
+    </ClCompile>
+    <ClCompile Include="dialog\RenderDlg.cpp">
+      <Filter>源文件\dialog</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Rhino.rc">
@@ -96,6 +105,7 @@
     <None Include="res\Rhino.rc2">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\Rhino.ico">
