--- a/Rhino.vcxproj
+++ b/Rhino.vcxproj
@@ -108,7 +108,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>mfplat.lib;mf.lib;mfreadwrite.lib;mfuuid.lib;d3d9.lib;d3d11.lib;shlwapi.lib;Winmm.lib;libx264.lib;libfdk-aac.lib;librtmp.lib;avutil.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;postproc.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>mfplat.lib;mf.lib;mfreadwrite.lib;mfuuid.lib;d3d9.lib;d3d11.lib;shlwapi.lib;Winmm.lib;avutil.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;postproc.lib;swresample.lib;swscale.lib;librtmp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -132,7 +132,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>mfplat.lib;mf.lib;mfreadwrite.lib;mfuuid.lib;d3d9.lib;d3d11.lib;shlwapi.lib;Winmm.lib;libx264.lib;libfdk-aac.lib;librtmp.lib;avutil.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;postproc.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>mfplat.lib;mf.lib;mfreadwrite.lib;mfuuid.lib;d3d9.lib;d3d11.lib;shlwapi.lib;Winmm.lib;avutil.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;postproc.lib;swresample.lib;swscale.lib;librtmp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -160,7 +160,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>mfplat.lib;mf.lib;mfreadwrite.lib;mfuuid.lib;d3d9.lib;d3d11.lib;shlwapi.lib;Winmm.lib;libx264.lib;libfdk-aac.lib;librtmp.lib;avutil.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;postproc.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>mfplat.lib;mf.lib;mfreadwrite.lib;mfuuid.lib;d3d9.lib;d3d11.lib;shlwapi.lib;Winmm.lib;avutil.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;postproc.lib;swresample.lib;swscale.lib;librtmp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -188,7 +188,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>mfplat.lib;mf.lib;mfreadwrite.lib;mfuuid.lib;d3d9.lib;d3d11.lib;shlwapi.lib;Winmm.lib;libx264.lib;libfdk-aac.lib;librtmp.lib;avutil.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;postproc.lib;swresample.lib;swscale.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>mfplat.lib;mf.lib;mfreadwrite.lib;mfuuid.lib;d3d9.lib;d3d11.lib;shlwapi.lib;Winmm.lib;avutil.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;postproc.lib;swresample.lib;swscale.lib;librtmp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
