--- a/Dolphin.vcxproj.filters
+++ b/Dolphin.vcxproj.filters
@@ -27,10 +27,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Rhino.h">
+    <ClInclude Include="Dolphin.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="RhinoDlg.h">
+    <ClInclude Include="DolphinDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="stdafx.h">
@@ -107,10 +107,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Rhino.cpp">
+    <ClCompile Include="Dolphin.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="RhinoDlg.cpp">
+    <ClCompile Include="DolphinDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
@@ -181,18 +181,18 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Rhino.rc">
+    <ResourceCompile Include="Dolphin.rc">
       <Filter>资源文件</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\Rhino.rc2">
+    <None Include="res\Dolphin.rc2">
       <Filter>资源文件</Filter>
     </None>
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\Rhino.ico">
+    <Image Include="res\Dolphin.ico">
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
